--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1696,6 +1696,17 @@ footer {
   }
 }
 
+@media screen and (max-width: $mobile-landscape-breakpoint + 1) {
+  .home-banner {
+    .banner-search.overlay {
+      .content {
+        background-image: none;
+        background-color: rgba(66, 132, 42, 0.89);
+      }
+    }
+  }
+}
+
 @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
   .hide-md {
     display: none;
