--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -1,8 +1,8 @@
 {{#*inline "term_checkbox"}}
 <div class="mdc-form-field">
   <div class="mdc-checkbox">
-    <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{key}}"
-    name="{{field}}[]" value="{{key}}" {{#if (contains selected key)}}checked{{/if}} />
+    <input type="checkbox" class="mdc-checkbox__native-control" id="{{instance_id}}_{{field}}_{{slug}}"
+    name="{{#compare field "===" "type"}}{{field}}{{else}}{{field}}[]{{/compare}}" value="{{slug}}"{{#if (contains selected slug)}} checked{{/if}} />
     <div class="mdc-checkbox__background">
       <svg class="mdc-checkbox__checkmark"
       viewBox="0 0 24 24">
@@ -14,7 +14,13 @@
     <div class="mdc-checkbox__mixedmark"></div>
   </div>
 </div>
-<label for="{{instance_id}}_{{field}}_{{key}}">{{key}}</label>
+<label for="{{instance_id}}_{{field}}_{{slug}}">
+  {{#compare value.key "===" "Management Board" ~}}
+  Trustee
+  {{else}}
+  {{{default value.key value}}}
+  {{/compare ~}}
+</label>
 </div>
 {{/inline}}
 
@@ -106,7 +112,7 @@
         </div>
       </div>
 
-      {{#each (split "roles,sectors,statuses" ",")}}
+      {{#each (split "roles,sectors" ",")}}
         <h3 class="mdc-drawer__content-heading">
           {{capitalize this}}
           <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{../instance_id}}-{{this}}-collapse"
@@ -115,12 +121,27 @@
             <i class="far {{#if (getProperty ../request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
           </span>
         </h3>
-        <div id="{{../instance_id}}-{{this}}-collapse" {{#unless (getProperty ../request.params.query this)}}style="display: none;"{{/unless}}>
-          {{#each (getProperty ../data.supplimentaryResponses.types.aggregations (concat this ".buckets")) ~}}
-          {{> term_checkbox key=key field=../this selected=(getProperty ../../request.params.query ../this) instance_id=../../instance_id}}
+        <div id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty ../request.params.query this)}} style="display: none;"{{/unless}}>
+          {{#each (getProperty ../data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+          {{> term_checkbox slug=key field=../this selected=(getProperty ../../request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty ../../data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
           {{/each ~}}
         </div>
       {{/each}}
+
+      <h3 class="mdc-drawer__content-heading">
+        Types
+        <span class="mdc-icon-toggle pull-right" data-collapse-target="#{{instance_id}}-statuses-collapse"
+              role="button" aria-pressed="false"
+              aria-label="Show roles" tabindex="0">
+          <i class="far {{#if request.params.query.statuses}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
+        </span>
+      </h3>
+      <div id="{{instance_id}}-statuses-collapse"{{#unless request.params.query.statuses}} style="display: none;"{{/unless}}>
+        {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
+        {{> term_checkbox value=(lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) slug=key field="statuses" selected=../request.params.query.statuses instance_id=../instance_id}}
+        {{/each ~}}
+        {{> term_checkbox value="Home-based" slug="home-based" field="type" selected=request.params.query.type instance_id=instance_id}}
+      </div>
 
       <div class="h-margin v-margin">
         <button class="mdc-button mdc-button--raised mdc-button--fullwidth" type="submit" id="{{instance_id}}-search-submit">
