Template fixes and fixes for new router

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -333,6 +333,29 @@ footer h3,
   background-color: $mdc-theme-primary;
 }
 
+.login-form {
+  margin: 10vh auto;
+  .mdc-card {
+    position: relative;
+  }
+  #login-message {
+    display: none;
+  }
+}
+
+.card-loader {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: $mdc-theme-complimentary-light;
+  opacity: 0.7;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  .card-loader-inner {
+  }
+}
+
 .goodmoves-page {
   margin: $unit*1.5 0;
   .x-items {
@@ -1642,6 +1665,17 @@ footer {
 .h-padding {
   padding-left: $unit/2;
   padding-right: $unit/2;
+}
+.h-padding-full {
+  padding-left: $unit;
+  padding-right: $unit;
+}
+
+.x-padding {
+  padding: $unit/2;
+}
+.x-padding-full {
+  padding: $unit;
 }
 
 .t-padding { padding-top: $unit/2; }
