--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-4-phone">
-              <button type="submit" id="search-jobs" class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search">
+              <button type="submit" id="search-jobs" class="mdc-button mdc-button--raised mdc-text-field--box mdc-button--search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
                 Search
                 <span class="far fa-search" aria-hidden="true"></span>
               </button>
