--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -149,7 +149,7 @@ if(location.host.indexOf('.local') > -1){
                 </a>
                 {{/each ~}}
               </nav>
-              <div class="mdc-menu-anchor">
+              <!-- <div class="mdc-menu-anchor">
                 <button class="mdc-button" data-menu-target="#roles-menu">
                   Roles
                   <span class="far fa-fw fa-angle-down"></span>
@@ -228,7 +228,7 @@ if(location.host.indexOf('.local') > -1){
                     {{/compare ~}}
                   </div>
                 </div>
-              </div>
+              </div> -->
               <nav class="mdc-tab-bar mdc-tab-bar__left" id="main-extra-tab-bar">
                 {{#each context.metaData.menus.main-extra ~}}
                 <a class="mdc-tab{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{stripTrailingSlash path}}">
