--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -73,7 +73,7 @@
         </div>
         <div class="detailed-info">
           {{#if description ~}}
-          <h4>Role</h4>
+          <h4 class="mdc-typography--headline6">Role</h4>
           <div class="mdc-typography--body1">
             {{{description}}}
           </div>
@@ -82,7 +82,7 @@
           {{{rendered.goodmoves_sponsor_logos}}}
 
           {{#if application_notes ~}}
-          <h4>Application notes</h4>
+          <h4 class="mdc-typography--headline6">Application notes</h4>
           <div class="mdc-typography--body1">
             {{{application_notes}}}
           </div>
@@ -96,7 +96,7 @@
         {{#ifAny organisation.profile organisation_website organisation_twitter organisation_facebook organisation_linkedin ~}}
         <div class="key-info-extra">
           {{#if organisation.profile ~}}
-          <h4>Organisation profile</h4>
+          <h4 class="mdc-typography--headline6">Organisation profile</h4>
           <div class="mdc-typography--body1">
             {{{organisation.profile}}}
           </div>
