--- a/sites/configurations/goodmoves/templates/pages/home-opt-3.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home-opt-3.hbs
@@ -1,6 +1,6 @@
-<div class="container-fluid home-banner">
+<div class="container-fluid home-banner option-3">
   <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');">
-    <div class="content page-content">
+    <div class="content">
       <!-- <div class="mdc-typography--headline5">Charity and voluntary sector recruitment</div> -->
       <form id="search-view" class="search-form" action="/search" method="GET">
         <input type="hidden" name="lat" value="">
