--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2123,6 +2123,7 @@ form#settled_status {
         h1.header-text {
           font-size: 4.8rem;
           line-height: 4rem;
+          letter-spacing: -0.1rem;
         }
       }
     }
