--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -1,12 +1,12 @@
 {{{rendered.vacancy_status}}}
 <div class="mdc-card__info--vacancy-row">
   <div class="mdc-card__info--vacancy">
-    <div class="mdc-card__info--vacancy-title mdc-typography--headline6">
+    <h2 class="mdc-card__info--vacancy-title mdc-typography--headline5">
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}">
         {{#if top_job}}<span class="top-job">Top job!</span>{{/if}}
         <span class="hover-underline">{{title}}</span>
       </a>
-    </div>
+    </h2>
     <ul class="fa-ul organisation">
       <li class="mdc-card__info--vacancy-organisation mdc-typography--body1">
         <span class="fa-li"><span class="far fa-building fa-fw" title="Organisation"></span></span>
