--- a/sites/configurations/goodmoves/templates/pages/logout.hbs
+++ b/sites/configurations/goodmoves/templates/pages/logout.hbs
@@ -1,8 +1,8 @@
-  <form id="login-form" method="POST" class="login-form">
+  <form id="logout-form" method="POST" class="logout-form">
     <div class="mdc-card">
       <div class="mdc-card__info--vacancy">
         <div class="mdc-card__info--vacancy-title mdc-typography--headline4">
-          Loging out
+          Logging out...
         </div>
       </div>
     </div>
@@ -12,7 +12,7 @@
       window.setTimeout(function() {
         goodmoves.app.auth().signOut().then(function() {
           window.location.href = '/';
-          goodmoves.setCookie('gm_token'); 
+          goodmoves.setCookie('gm_token');
         }).catch(function(err) {
           console.error('Error logging out:', err);
         });
