--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1719,7 +1719,7 @@ form#settled_status {
           min-height: $nav-height;
           height: $nav-height;
           font-weight: 600;
-          padding: 0 $unit*(3/4);
+          padding: 0 $unit/2;
           .mdc-tab--label {
             text-transform: none;
             line-height: $nav-height - 4px;
