--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -69,7 +69,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <h1 class="header-text">
                 <span class="header-text-banner">
-                  Welcome to<br />goodmoves
+                  <span class="normal welcome">Welcome to</span><br />good<span class="normal moves">moves</span>
                 </span>
               </h1>
               <p class="header-extra">
