--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -291,6 +291,10 @@ footer h3,
 .mdc-card__title,
 .mdc-textfield__label,
 .mdc-typography--title,
+.supplimentary-list-title {
+  font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
+  font-weight: $heading-font-weight;
+}
 .mdc-typography--headline1,
 .mdc-typography--headline2,
 .mdc-typography--headline3,
@@ -298,10 +302,8 @@ footer h3,
 .mdc-typography--headline5,
 .mdc-typography--headline6,
 .mdc-typography--headline7,
-.mdc-typography--headline,
-.supplimentary-list-title {
-  font-family: $heading-font-family, $base-font-family, Helvetica, Arial, sans-serif;
-  font-weight: $heading-font-weight;
+.mdc-typography--headline {
+  font-weight: $base-font-weight;
 }
 .mdc-typography--body1 {
   font-size: 1rem;
@@ -432,10 +434,12 @@ footer h3,
 
 .x-items {
   margin-top: $unit*1.5;
-  display: flex;
+  // display: flex;
+  text-align: center;
   .x-item {
     line-height: 0;
-    align-items: flex-start;
+    // align-items: flex-start;
+    display: block;
   }
   .x-item-side {
     display: inline-flex;
@@ -1653,7 +1657,7 @@ footer {
     padding: 0 $unit;
   }
   .footer-main {
-    margin-bottom: $unit/2;
+    margin-bottom: $unit;
   }
   h3 {
     color: white;
