Latest styling updates

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -389,10 +389,10 @@ footer h3,
 
 .goodmoves-page {
   margin: $unit*1.5 0;
-  .x-items {
-    margin-top: 0;
-    margin-bottom: $unit*1.5;
-  }
+  // .x-items {
+  //   margin-top: 0;
+  //   margin-bottom: $unit*1.5;
+  // }
   .mdc-card {
     padding: $unit;
     .mdc-typography--headline4 {
@@ -433,13 +433,12 @@ footer h3,
 }
 
 .x-items {
-  margin-top: $unit*1.5;
-  // display: flex;
-  text-align: center;
+  display: inline-block;
+  margin: 0 auto;
+  width: 100%;
   .x-item {
     line-height: 0;
-    // align-items: flex-start;
-    display: block;
+    display: inline-block;
   }
   .x-item-side {
     display: inline-flex;
