--- a/sites/configurations/goodmoves/partials/banner-ads.hbs
+++ b/sites/configurations/goodmoves/partials/banner-ads.hbs
@@ -1,5 +1,5 @@
-<div class="x-items mdc-theme--secondary-bg">
-  <a class="x-item" target="_blank" href="https://scvo.org/services/office-space">
+<div class="x-items">
+  <a class="x-item mdc-theme--secondary-bg mdc-elevation--z1" target="_blank" href="https://www.qmu.ac.uk/study-here/postgraduate-study/2018-postgraduate-courses/master-of-public-administration-mpa/">
     <img class="responsive-img" src="https://storage.googleapis.com/elasticsauce.appspot.com/goodmoves/banners/qmu-mpa.jpg" alt="" height="90">
   </a>
   <!-- <a class="x-item-side mdc-theme--on-secondary" href="/advertise">
