--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -389,17 +389,27 @@ if(location.host.indexOf('.local') > -1){
                     </li>
                   </ul>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone help">
-                  <h3>Help</h3>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone info">
+                  <h3>Information</h3>
                   <ul class="mdc-list">
-                    {{#each context.metaData.menus.footer ~}}
+                    {{#each context.metaData.menus.footer-info ~}}
                     <li class="mdc-list-item">
                       <a href="{{path}}">{{{label}}}</a>
                     </li>
                     {{/each ~}}
                   </ul>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone about">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone help">
+                  <h3>Help</h3>
+                  <ul class="mdc-list">
+                    {{#each context.metaData.menus.footer-help ~}}
+                    <li class="mdc-list-item">
+                      <a href="{{path}}">{{{label}}}</a>
+                    </li>
+                    {{/each ~}}
+                  </ul>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone about">
                   <h3>About</h3>
                   <p>
                     <strong>Goodmoves</strong> is the premier careers hub for the civil society, charity and voluntary sector &ndash; run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>.
