--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -145,7 +145,8 @@
 
       <div class="h-margin v-margin">
         <button class="mdc-button mdc-button--raised mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
-          Search jobs
+          <span class="far fa-search fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
+          Search
         </button>
       </div>
     </form>
