--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -2,6 +2,106 @@
   <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');">
     <div class="content page-content">
       <!-- <div class="mdc-typography--headline5">Charity and voluntary sector recruitment</div> -->
+      <div class="overlay-content">
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+              <h1 class="header-text">
+                <span class="header-text-banner">
+                  <span class="normal welcome">Welcome to</span><br />good<span class="normal moves">moves</span>
+                </span>
+              </h1>
+              <p class="header-extra">
+                Charity and voluntary sector recruitment
+              </p>
+              <div class="mdc-card__actions">
+                <!-- <a href="/about" class="mdc-button">Find out more</a> -->
+                <a href="/search" class="mdc-button">Advanced search</a>
+                <div class="mdc-menu-anchor">
+                  <button class="mdc-button" data-menu-target="#sectors-menu">
+                    Sectors
+                    <span class="far fa-fw fa-angle-down"></span>
+                  </button>
+                  <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="sectors-menu">
+                    <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
+                      {{#each data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
+                      <a class="mdc-list-item" href="/search?sector={{urlencode key}}" role="menuitem">
+                        <span class="mdc-list-item__text">
+                          {{#with (lookup ../data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
+                          {{{key}}}
+                          {{/with ~}}
+                        </span>
+                        <span class="mdc-list-item__meta">
+                          {{doc_count}}
+                        </span>
+                      </a>
+                      {{/each ~}}
+                    </div>
+                  </div>
+                </div>
+                <div class="mdc-menu-anchor">
+                  <button class="mdc-button" data-menu-target="#roles-menu">
+                    Roles
+                    <span class="far fa-fw fa-angle-down"></span>
+                  </button>
+                  <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="roles-menu">
+                    <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
+                      {{#each data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
+                      <a class="mdc-list-item" href="/search?role={{urlencode key}}" role="menuitem">
+                        <span class="mdc-list-item__text">
+                          {{#with (lookup ../data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
+                          {{{key}}}
+                          {{/with ~}}
+                        </span>
+                        <span class="mdc-list-item__meta">
+                          {{doc_count}}
+                        </span>
+                      </a>
+                      {{/each ~}}
+                    </div>
+                  </div>
+                </div>
+                <div class="mdc-menu-anchor">
+                  <button class="mdc-button" data-menu-target="#statuses-menu">
+                    Types
+                    <span class="far fa-fw fa-angle-down"></span>
+                  </button>
+                  <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="statuses-menu">
+                    <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
+                      {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
+                      <a class="mdc-list-item" href="/search?status={{urlencode key}}" role="menuitem">
+                        <span class="mdc-list-item__text">
+                          {{#compare key "===" "management-board" ~}}
+                          Trustee
+                          {{else}}
+                          {{#with (lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
+                          {{{key}}}
+                          {{/with ~}}
+                          {{/compare ~}}
+                        </span>
+                        <span class="mdc-list-item__meta">
+                          {{doc_count}}
+                        </span>
+                      </a>
+                      {{/each ~}}
+                      {{#compare data.supplimentaryResponses.home_based.hits.total ">" 0 ~}}
+                      <a class="mdc-list-item" href="/search?type=home-based" role="menuitem">
+                        <span class="mdc-list-item__text">
+                          Home-based
+                        </span>
+                        <span class="mdc-list-item__meta">
+                          {{data.supplimentaryResponses.home_based.hits.total}}
+                        </span>
+                      </a>
+                      {{/compare ~}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
         <input type="hidden" name="lat" value="">
         <input type="hidden" name="lng" value="">
@@ -63,110 +163,6 @@
           </div>
         </div>
       </form>
-      <div class="overlay-content">
-        <div class="mdc-layout-grid">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-              <h1 class="header-text">
-                <span class="header-text-banner">
-                  <span class="normal welcome">Welcome to</span><br />good<span class="normal moves">moves</span>
-                </span>
-              </h1>
-              <p class="header-extra">
-                Charity and voluntary sector recruitment
-              </p>
-              <p class="mdc-card__actions">
-                <a href="/about" class="mdc-button">Find out more</a>
-                <a href="/browse" class="mdc-button">Browse jobs</a>
-              </p>
-            </div>
-          </div>
-          <!-- <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              <div class="mdc-menu-anchor">
-                <button class="mdc-button mdc-button--raised" data-menu-target="#sectors-menu">
-                  Sectors
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="sectors-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each data.supplimentaryResponses.types.aggregations.sectors_slugs.buckets ~}}
-                    <a class="mdc-list-item" href="/search?sector={{urlencode key}}" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        {{#with (lookup ../data.supplimentaryResponses.types.aggregations.sectors.buckets @index) ~}}
-                        {{{key}}}
-                        {{/with ~}}
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{doc_count}}
-                      </span>
-                    </a>
-                    {{/each ~}}
-                  </div>
-                </div>
-              </div>
-              <div class="mdc-menu-anchor">
-                <button class="mdc-button mdc-button--raised" data-menu-target="#roles-menu">
-                  Roles
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="roles-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each data.supplimentaryResponses.types.aggregations.roles_slugs.buckets ~}}
-                    <a class="mdc-list-item" href="/search?role={{urlencode key}}" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        {{#with (lookup ../data.supplimentaryResponses.types.aggregations.roles.buckets @index) ~}}
-                        {{{key}}}
-                        {{/with ~}}
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{doc_count}}
-                      </span>
-                    </a>
-                    {{/each ~}}
-                  </div>
-                </div>
-              </div>
-              <div class="mdc-menu-anchor">
-                <button class="mdc-button mdc-button--raised" data-menu-target="#statuses-menu">
-                  Types
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="statuses-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    {{#each data.supplimentaryResponses.types.aggregations.statuses_slugs.buckets ~}}
-                    <a class="mdc-list-item" href="/search?status={{urlencode key}}" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        {{#compare key "===" "management-board" ~}}
-                        Trustee
-                        {{else}}
-                        {{#with (lookup ../data.supplimentaryResponses.types.aggregations.statuses.buckets @index) ~}}
-                        {{{key}}}
-                        {{/with ~}}
-                        {{/compare ~}}
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{doc_count}}
-                      </span>
-                    </a>
-                    {{/each ~}}
-                    {{#compare data.supplimentaryResponses.home_based.hits.total ">" 0 ~}}
-                    <a class="mdc-list-item" href="/search?type=home-based" role="menuitem">
-                      <span class="mdc-list-item__text">
-                        Home-based
-                      </span>
-                      <span class="mdc-list-item__meta">
-                        {{data.supplimentaryResponses.home_based.hits.total}}
-                      </span>
-                    </a>
-                    {{/compare ~}}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
-        </div>
-      </div>
     </div>
   </div>
 
