--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -818,7 +818,7 @@ a {
         background: transparent;
       }
       h4 {
-        margin: $unit/2 0 $unit/2;
+        margin: $unit*1.25 0 $unit*(3/4);
       }
       h4:first-child {
         margin-top: 0;
@@ -1426,7 +1426,7 @@ footer,
         }
         .mdc-button:hover {
           background: white !important;
-          color: $mdc-theme-primary !important;
+          color: $mdc-theme-primary-dark !important;
           border-color: $mdc-theme-primary-dark !important;
         }
         .mdc-menu-anchor {
