--- a/sites/configurations/goodmoves/partials/organisation-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/organisation-search-results.hbs
@@ -14,9 +14,15 @@
   </div>
 </div>
 
-{{#each data.search_data.detailed_results.hits.hits ~}}
-{{> organisation_search_result _source}}
-{{/each ~}}
+<div class="mdc-layout-grid">
+  <div class="mdc-layout-grid__inner">
+    {{#each data.search_data.detailed_results.hits.hits ~}}
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+      {{> organisation_search_result _source}}
+    </div>
+    {{/each ~}}
+  </div>
+</div>
 
 <div class="foot">
   {{> pagination paging=data.search_data.detailed_results.pagination}}
